fixed chat covering nav and made messages load on submit, fixed business offer cards mobile layout

--- a/src/Components/SendMessage/SendMessage.css
+++ b/src/Components/SendMessage/SendMessage.css
@@ -33,7 +33,7 @@
 #send-message {
   background-color: #111;
   display: flex;
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
   color: black;
